Added null aware deserializers